test/fail/BadConstraint1.ma
-- 2013-03-30 constraints must follow quantifier
fun f : [A : Set] -> [i : Size] -> (A -> |i| < |i| -> A) -> A {}
